--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     font-family: 'Times New Roman';
 }
     body {
-    background-image: url("/latihan/images/background.jpg");
+    background-image: url("/HTMLcantik3/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
